--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.5.0",
     "daisyui": "^5.0.46",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
