--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
-DB_HOST=postgres
+DB_HOST=localhost
 DB_NAME=capstone2
-DB_PASSWORD=098611059
 DB_PORT=5432
 PORT=5000
-DB_PASSWORD=bdaykopostgresql27
+DB_PASSWORD=bdaykopostgresq127
